--- a/ex1.html
+++ b/ex1.html
@@ -5,7 +5,7 @@
 	<head>
 		<meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css"
- href="assets/transf.css">
+ href="assets/tranf.css">
 		<title>Des images</title>
 	</head>
 	<body>
